--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "com.vtf.config-kit",
   "version": "1.0.0",
   "displayName": "ConfigKit",
-  "description": "This is a package for config",
+  "description": "This is a package for config"
 }
 
